Provide sbt installation [#126234177]